# SDL2-MinGW-CMake-VSC

./: README.md
hello/: CMakeLists.txt  main.cpp
hello/cmake/: FindSDL2.cmake
